--- a/kubernetes/apps/k8s/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/app/helmrelease.yaml
@@ -75,62 +75,25 @@ spec:
                 memory: 100Mi
               limits:
                 memory: 750Mi
-          codeserver:
-            image:
-              repository: ghcr.io/coder/code-server
-              tag: 4.18.0
-            env:
-              TZ: America/New_York
-            args:
-              - "/config"
-              - --auth
-              - "none"
-              - --user-data-dir
-              - "/config/.vscode"
-              - --extensions-dir
-              - "/config/.vscode"
-            volumeMounts:
-            - name: config
-              mountPath: /config
     service:
       main:
         ports:
           http:
-            port: &hassPort 8123
-      codeserver:
-        type: ClusterIP
-        controller: main
-        ports:
-          http:
-            enabled: true
-            port: &codeserverPort 8080
+            port: &port 8123
     ingress:
       main:
         className: nginx
         hosts:
-          - host: &hassHost hass.${DOMAIN}
+          - host: &host hass.${DOMAIN}
             paths:
               - path: /
                 pathType: Prefix
                 service:
                   name: main
-                  port: *hassPort
+                  port: *port
         tls:
           - hosts:
-              - *hassHost
-      codeserver:
-        className: nginx
-        hosts:
-          - host: &codeserverHost hass-code.${DOMAIN}
-            paths:
-            - path: /
-              pathType: Prefix
-              service:
-                name: codeserver
-                port: *codeserverPort
-        tls:
-          - hosts:
-              - *codeserverHost
+              - *host
     persistence:
       auth:
         name: home-assistant-auth
