--- a/kubernetes/apps/k8s/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/app/helmrelease.yaml
@@ -81,6 +81,7 @@ spec:
           http:
             port: &port 8123
     ingress:
+      enabled: true
       main:
         className: nginx
         hosts:
