--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.0.3
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -23,67 +23,87 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
-  uninstall:
-    keepHistory: false
   dependsOn:
     - name: rook-ceph-cluster
       namespace: rook-ceph
     - name: volsync
       namespace: volsync
   values:
-    controller:
-      type: statefulset
-    image:
-      repository: ghcr.io/zwave-js/zwave-js-ui
-      tag: 9.2.3
-    env:
-      TZ: America/New_York
+    defaultPodOptions:
+      nodeSelector:
+        feature.node.kubernetes.io/skyconnect: "true"
+    controllers:
+      main:
+        type: statefulset
+        statefulset:
+          volumeClaimTemplates:
+            - name: config
+              mountPath: /usr/src/app/store
+              accessMode: ReadWriteOnce
+              size: 1Gi
+              storageClass: ceph-block
+        annotations:
+          reloader.stakater.com/auto: "true"
+        containers:
+          main:
+            securityContext:
+              privileged: true
+            image:
+              repository: ghcr.io/zwave-js/zwave-js-ui
+              tag: 9.2.3
+              imagePullPolicy: IfNotPresent
+            env:
+              TZ: America/New_York
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /health
+                    port: *port
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
+              startup:
+                enabled: false
+            resources:
+              requests:
+                cpu: 10m
+                memory: 100Mi
+              limits:
+                memory: 500Mi
     service:
       main:
         ports:
           http:
             port: &port 8091
           websocket:
-            enabled: true
-            port: 3000
-    probes:
-      liveness: &probes
-        enabled: true
-        custom: true
-        spec:
-          httpGet:
-            path: /health
-            port: *port
-          initialDelaySeconds: 0
-          periodSeconds: 10
-          timeoutSeconds: 1
-          failureThreshold: 3
-      readiness: *probes
-      startup:
-        enabled: false
+            port: &wsPort 3000
     ingress:
       main:
-        enabled: false
-    securityContext:
-      privileged: true
-    volumeClaimTemplates:
-      - name: config
-        mountPath: /usr/src/app/store
-        accessMode: ReadWriteOnce
-        size: 1Gi
-        storageClass: ceph-block
+        enabled: true
+        className: nginx
+        annotations:
+          nginx.ingress.kubernetes.io/auth-url: https://oauth.nucstack.com/oauth2/auth
+          nginx.ingress.kubernetes.io/auth-signin: https://oauth.nucstack.com/oauth2/start
+        hosts:
+          - host: &host zwavejs.${DOMAIN}
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  name: main
+                  port: *port
+        tls:
+          - hosts:
+              - *host
     persistence:
       usb:
-        enabled: true
         type: hostPath
         hostPath: /dev/serial/by-id/usb-Silicon_Labs_CP2102N_USB_to_UART_Bridge_Controller_0030b5ff1aa4eb11a16526259da30875-if00-port0
-        mountPath: /dev/ttyUSB0
         hostPathType: CharDevice
-    nodeSelector:
-      feature.node.kubernetes.io/skyconnect: "true"
-    resources:
-      requests:
-        cpu: 10m
-        memory: 100Mi
-      limits:
-        memory: 500Mi
+        globalMounts:
+          - path: /dev/ttyUSB0
