--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -61,7 +61,7 @@ spec:
                 spec:
                   httpGet:
                     path: /health
-                    port: *port
+                    port: &port 8091
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
@@ -79,9 +79,9 @@ spec:
       main:
         ports:
           http:
-            port: &port 8091
+            port: *port
           websocket:
-            port: &wsPort 3000
+            port: 3000
     ingress:
       main:
         enabled: true
