--- a/kubernetes/apps/k8s/home-automation/esphome/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/esphome/app/helmrelease.yaml
@@ -42,7 +42,8 @@ spec:
         statefulset:
           volumeClaimTemplates:
             - name: config
-              mountPath: /config
+              globalMounts:
+                - path: /config
               accessMode: ReadWriteOnce
               size: 10Gi
               storageClass: ceph-block
