--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/tenant.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/tenant.yaml
@@ -37,3 +37,6 @@ spec:
     - name: "db-backup"
       region: "us-east-1"
       objectLock: true
+    - name: "pg-backup"
+      region: "us-east-1"
+      objectLock: false
