drop prom operator

--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/tenant.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/tenant.yaml
@@ -5,7 +5,7 @@ metadata:
   name: minio-pool
   namespace: storage
 spec:
-  prometheusOperator: true
+  prometheusOperator: false
   pools:
     - servers: 2
       name: minio-pool
