relocate to new bucket

--- a/kubernetes/apps/k8s/media/immich/database/cluster.yaml
+++ b/kubernetes/apps/k8s/media/immich/database/cluster.yaml
@@ -39,7 +39,7 @@ spec:
       wal:
         compression: bzip2
         maxParallel: 8
-      destinationPath: s3://db-backup/immich
+      destinationPath: s3://pg-backup/immich
       endpointURL: "https://minio.logfold.com"
       serverName: &currentCluster immich-6
       s3Credentials:
@@ -52,7 +52,7 @@ spec:
   externalClusters:
   - name: *previousCluster
     barmanObjectStore:
-      destinationPath: s3://db-backup/immich
+      destinationPath: s3://pg-backup/immich
       endpointURL: "https://minio.logfold.com"
       s3Credentials:
         accessKeyId:
