--- a/kubernetes/apps/shared/kube-system/coredns/app/helmrelease.yaml
+++ b/kubernetes/apps/shared/kube-system/coredns/app/helmrelease.yaml
@@ -34,8 +34,8 @@ spec:
       #clusterIP: 10.31.0.10
     serviceAccount:
       create: true
-    podAnnotations:
-      policy.cilium.io/proxy-visibility: "<Egress/53/UDP/DNS>"
+    # podAnnotations:
+    #   policy.cilium.io/proxy-visibility: "<Egress/53/UDP/DNS>"
     deployment:
       annotations:
         reloader.stakater.com/auto: "true"
