--- a/kubernetes/apps/k8s/kube-system/cilium/policies/kustomization.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/kustomization.yaml
@@ -3,6 +3,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Flux-Kustomizations
-  - ./cilium/ks.yaml
-  - ./tetragon/ks.yaml
+  - ./deny-all.yaml
