--- a/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
@@ -60,7 +60,7 @@ specs:
         name: ingress-nginx
         component: controller
     ingress:
-    - toEndpoints:
+    - fromEndpoints:
       - matchLabels:
           k8s:io.kubernetes.pod.namespace: media
           name: immich-server
