--- a/kubernetes/apps/k8s/kube-system/cilium/policies/ingress.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/ingress.yaml
@@ -42,7 +42,7 @@ specs:
     - toEndpoints:
       - matchLabels:
           k8s:io.kubernetes.pod.namespace: kube-system
-          k8s-app: kube-dns
+          k8s:k8s-app: kube-dns
       toPorts:
       - ports:
         - port: "53"
@@ -56,13 +56,13 @@ metadata:
 specs:
   - endpointSelector:
       matchLabels:
-        name: ingress-nginx
-        component: controller
+        k8s:name: ingress-nginx
+        k8s:component: controller
     egress:
     - toEndpoints:
       - matchLabels:
           k8s:io.kubernetes.pod.namespace: media
-          name: immich-server
+          k8s:name: immich-server
       toPorts:
       - ports:
         - port: "3001"
