--- a/kubernetes/apps/k8s/kube-system/cilium/policies/ingress.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/ingress.yaml
@@ -42,7 +42,7 @@ specs:
     - toEndpoints:
       - matchLabels:
           k8s:io.kubernetes.pod.namespace: kube-system
-          k8s:k8s-app: kube-dns
+          k8s-app: kube-dns
       toPorts:
       - ports:
         - port: "53"
@@ -56,7 +56,7 @@ metadata:
 specs:
   - endpointSelector:
       matchLabels:
-        k8s:name: ingress-nginx
-        k8s:component: controller
+        name: ingress-nginx
+        component: controller
     egress:
     - {}
