--- a/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
@@ -42,7 +42,7 @@ specs:
     - toEndpoints:
       - matchLabels:
           k8s:io.kubernetes.pod.namespace: kube-system
-          k8s-app: kube-dns
+          k8s:k8s-app: kube-dns
       toPorts:
       - ports:
         - port: "53"
@@ -51,20 +51,19 @@ specs:
 apiVersion: "cilium.io/v2"
 kind: CiliumNetworkPolicy
 metadata:
-  name: "allow-ingress-to-immich"
+  name: "allow-ingress-nginx-to-immich"
   namespace: media
 specs:
   - endpointSelector:
       matchLabels:
         name: immich-server
     ingress:
-    - {}
-      # fromEndpoints:
-      # - matchLabels:
-      #     k8s:io.kubernetes.pod.namespace: ingress
-      #     name: ingress-nginx
-      #     component: controller
-      # toPorts:
-      # - ports:
-      #   - port: "3001"
-      #     protocol: TCP
+    - fromEndpoints:
+      - matchLabels:
+          k8s:io.kubernetes.pod.namespace: ingress
+          k8s:name: ingress-nginx
+          k8s:component: controller
+      toPorts:
+      - ports:
+        - port: "3001"
+          protocol: TCP
