--- a/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
@@ -56,7 +56,7 @@ metadata:
 specs:
   - endpointSelector:
       matchLabels:
-        name: immich-server
+        k8s:name: immich-server
     ingress:
     - fromEndpoints:
       - matchLabels:
@@ -66,4 +66,17 @@ specs:
       toPorts:
       - ports:
         - port: "3001"
+          protocol: TCP
+  - endpointSelector:
+      matchLabels:
+        k8s:name: immich-web
+    ingress:
+    - fromEndpoints:
+      - matchLabels:
+          k8s:io.kubernetes.pod.namespace: ingress
+          k8s:name: ingress-nginx
+          k8s:component: controller
+      toPorts:
+      - ports:
+        - port: "3000"
           protocol: TCP
