--- a/kubernetes/apps/k8s/kube-system/cilium/policies/ingress.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/ingress.yaml
@@ -49,7 +49,7 @@ specs:
           protocol: UDP
 ---
 apiVersion: "cilium.io/v2"
-kind: CiliumNetworkPolicy
+kind: CiliumClusterwideNetworkPolicy
 metadata:
   name: "allow-nginx-egress-to-any"
   namespace: ingress
@@ -59,4 +59,6 @@ specs:
         k8s:name: ingress-nginx
         k8s:component: controller
     egress:
-    - {}
+    - toEndpoints:
+      - matchLabels:
+          k8s:io.kubernetes.pod.namespace: media
