--- a/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
@@ -51,7 +51,7 @@ specs:
 apiVersion: "cilium.io/v2"
 kind: CiliumNetworkPolicy
 metadata:
-  name: "allow-ingress-to-immich"
+  name: "allow-ingress-nginx-to-immich"
   namespace: media
 specs:
   - endpointSelector:
@@ -67,15 +67,31 @@ specs:
       - ports:
         - port: "3001"
           protocol: TCP
+---
+apiVersion: "cilium.io/v2"
+kind: CiliumNetworkPolicy
+metadata:
+  name: "allow-egress-nginx-to-immich"
+  namespace: media
+specs:
   - endpointSelector:
       matchLabels:
-        k8s:name: immich-web
-    ingress:
-    - fromEndpoints:
+        k8s:io.kubernetes.pod.namespace: ingress
+        k8s:name: ingress-nginx
+        k8s:component: controller
+    egress:
+    - toEndpoints:
       - matchLabels:
-          k8s:io.kubernetes.pod.namespace: ingress
-          k8s:name: ingress-nginx
-          k8s:component: controller
+          k8s:io.kubernetes.pod.namespace: media
+          k8s:name: immich-server
+      toPorts:
+      - ports:
+        - port: "3001"
+          protocol: TCP
+    - toEndpoints:
+      - matchLabels:
+          k8s:io.kubernetes.pod.namespace: media
+          k8s:name: immich-web
       toPorts:
       - ports:
         - port: "3000"
