--- a/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
@@ -63,4 +63,4 @@ specs:
           k8s:io.kubernetes.pod.namespace: ingress
     - toEndpoints:
       - matchLabels:
-          k8s:io.kubernetes.pod.namespace: media
+          k8s:io.kubernetes.pod.namespace: ingress
