--- a/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
@@ -60,7 +60,7 @@ specs:
     ingress:
     - fromEndpoints:
       - matchLabels:
-          k8s:io.kubernetes.pod.namespace: ingress
+          k8s:io.kubernetes.pod.namespace: media
     - toEndpoints:
       - matchLabels:
           k8s:io.kubernetes.pod.namespace: ingress
