--- a/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
@@ -58,9 +58,5 @@ specs:
       matchLabels:
         k8s:name: immich-server
     ingress:
-    - fromEndpoints:
-      - matchLabels:
-          k8s:io.kubernetes.pod.namespace: media
-    - toEndpoints:
-      - matchLabels:
-          k8s:io.kubernetes.pod.namespace: ingress
+    - fromEndpoints: {}
+    - toEndpoints: {}
