--- a/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
@@ -44,5 +44,6 @@ specs:
       matchLabels:
         k8s:name: immich-server
     ingress:
-    - fromEndpoints: {}
-    - toEndpoints: {}
+    - fromEndpoints:
+      - matchLabels:
+          k8s:io.kubernetes.pod.namespace: ingress
