--- a/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
@@ -2,7 +2,21 @@
 apiVersion: "cilium.io/v2"
 kind: CiliumNetworkPolicy
 metadata:
-  name: "allow-all-within-namespace"
+  name: deny-all
+  namespace: media
+spec:
+  description: "Default deny policy"
+  endpointSelector:
+    matchLabels: {}
+  ingress:
+  - {}
+  egress:
+  - {}
+---
+apiVersion: "cilium.io/v2"
+kind: CiliumNetworkPolicy
+metadata:
+  name: allowed
   namespace: media
 specs:
   - endpointSelector:
@@ -10,40 +24,41 @@ specs:
     egress:
     - toEndpoints:
       - matchLabels:
-          k8s:io.kubernetes.pod.namespace: media
+          "k8s:io.kubernetes.pod.namespace": media
     ingress:
     - fromEndpoints:
       - matchLabels:
-          k8s:io.kubernetes.pod.namespace: media
----
-apiVersion: "cilium.io/v2"
-kind: CiliumNetworkPolicy
-metadata:
-  name: "allow-all-to-kube-system-coredns"
-  namespace: media
-specs:
+          "k8s:io.kubernetes.pod.namespace": media
   - endpointSelector:
       matchLabels: {}
     egress:
     - toEndpoints:
       - matchLabels:
-          k8s:io.kubernetes.pod.namespace: kube-system
-          k8s:k8s-app: kube-dns
-      toPorts:
-      - ports:
-        - port: "53"
-          protocol: UDP
----
-apiVersion: "cilium.io/v2"
-kind: CiliumNetworkPolicy
-metadata:
-  name: "allow-ingress-to-immich"
-  namespace: media
-specs:
+          "k8s:io.kubernetes.pod.namespace": kube-system
+          "k8s:k8s-app": kube-dns
   - endpointSelector:
       matchLabels:
-        k8s:name: immich-server
+        name: immich-server
     ingress:
     - fromEndpoints:
       - matchLabels:
-          k8s:io.kubernetes.pod.namespace: ingress
+          "k8s:io.kubernetes.pod.namespace": ingress
+          name: ingress-nginx
+          component: controller
+      toPorts:
+      - ports:
+        - port: "3001"
+          protocol: "TCP"
+  - endpointSelector:
+      matchLabels:
+        name: immich-web
+    ingress:
+    - fromEndpoints:
+      - matchLabels:
+          "k8s:io.kubernetes.pod.namespace": ingress
+          name: ingress-nginx
+          component: controller
+      toPorts:
+      - ports:
+        - port: "3000"
+          protocol: "TCP"
