--- a/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/policies/media.yaml
@@ -64,8 +64,8 @@ specs:
           protocol: "TCP"
   - endpointSelector:
       matchLabels:
-        cnpg.io/cluster: immich
-        cnpg.io/instancename: immich-1
+        "cnpg.io/cluster": immich
+        "cnpg.io/instancename": immich-1
     ingress:
     - fromEndpoints:
       - matchLabels:
