--- a/kubernetes/apps/shared/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/shared/kube-system/cilium/app/helmrelease.yaml
@@ -38,6 +38,15 @@ spec:
       id: "${CILIUM_ID}"
     clustermesh:
       useAPIServer: true
+      config:
+        enabled: true
+        clusters:
+        - name: k0s
+          address: k0s.mesh.cilium.io
+          port: 2379
+        - name: k8s
+          address: k8s.mesh.cilium.io
+          port: 2379
       apiserver:
         tls:
           auto:
