--- a/kubernetes/apps/k0s/kube-system/tetragon/ks.yaml
+++ b/kubernetes/apps/k0s/kube-system/tetragon/ks.yaml
@@ -2,10 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: shared-apps-cilium
+  name: cluster-apps-tetragon-policies
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/shared/kube-system/cilium/app
+  path: ./kubernetes/apps/k8s/kube-system/tetragon/policies
   prune: false
   sourceRef:
     kind: GitRepository
