--- a/kubernetes/apps/k8s/kube-system/cilium/ks.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/ks.yaml
@@ -2,6 +2,23 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: cluster-apps-cilium
+  namespace: flux-system
+spec:
+  path: ./kubernetes/apps/k8s/kube-system/cilium/app
+  prune: false
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
+
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: cluster-apps-cilium-policies
   namespace: flux-system
 spec:
