--- a/kubernetes/apps/k8s/monitoring/kustomization.yaml
+++ b/kubernetes/apps/k8s/monitoring/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./victoria-metrics/ks.yaml
-  #- ./victoria-logs/ks.yaml
+  - ./victoria-logs/ks.yaml
 
