--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -38,12 +38,12 @@ spec:
       id: "${CILIUM_ID}"
     clustermesh:
       useAPIServer: true
-      config:
-        enabled: true
-        clusters:
-        - name: k0s
-          address: k0s.mesh.cilium.io
-          port: 2379
+      # config:
+      #   enabled: true
+      #   clusters:
+      #   - name: k0s
+      #     address: k0s.mesh.cilium.io
+      #     port: 2379
       apiserver:
         tls:
           auto:
