--- a/kubernetes/apps/k8s/home-automation/tidbyt-proxy/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/tidbyt-proxy/app/helmrelease.yaml
@@ -43,7 +43,7 @@ spec:
                 drop:
                   - ALL
               runAsNonRoot: true
-              readOnlyRootFilesystem: true
+              readOnlyRootFilesystem: false
               allowPrivilegeEscalation: false
               seccompProfile:
                 type: RuntimeDefault
