--- a/kubernetes/apps/shared/kube-system/coredns/app/helmrelease.yaml
+++ b/kubernetes/apps/shared/kube-system/coredns/app/helmrelease.yaml
@@ -54,6 +54,8 @@ spec:
             configBlock: |-
               lameduck 5s
           - name: ready
+          - name: rewrite
+            parameters: name foo.bar.com 192.168.9.101
           - name: kubernetes
             parameters: cluster.local in-addr.arpa ip6.arpa
             configBlock: |-
