--- a/kubernetes/apps/k0s/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/grafana/app/helmrelease.yaml
@@ -194,6 +194,7 @@ spec:
       - natel-discrete-panel
       - pr0ps-trackmap-panel
       - vonage-status-panel
+      - isovalent-hubble-datasource
     serviceMonitor:
       enabled: true
     ingress:
